Fix lightboxes not showing up on mobile

--- a/src/ui/nav/hamburger_menu/hamburger_menu.module.css
+++ b/src/ui/nav/hamburger_menu/hamburger_menu.module.css
@@ -9,6 +9,7 @@
   left: 0;
   z-index: 150;
   width: 100%;
+  height: 0;
 }
 
 .toggleButtonContainer {
